--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "core-js": "^3.21.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
@@ -65,6 +66,11 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2"
+  },
+  "overrides": {
+    "vue-cli-plugin-electron-builder": {
+      "electron-builder": "^23.0.2"
+    }
   },
   "eslintConfig": {
     "root": true,
